// Vitest Snapshot v1

exports[`fixtures:basic > Get contents index > basic-index-body 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Index",
        },
      ],
      "props": {
        "id": "index",
      },
      "tag": "h1",
      "type": "element",
    },
  ],
  "toc": {
    "depth": 2,
    "links": [],
    "searchDepth": 2,
    "title": "",
  },
  "type": "root",
}
`;

exports[`fixtures:basic > navigation > Get cats navigation > basic-navigation-cats 1`] = `
[
  {
    "_path": "/cats",
    "children": [
      {
        "_path": "/cats/bombay",
        "title": "Bombay",
      },
      {
        "_path": "/cats",
        "title": "Cats list",
      },
      {
        "_path": "/cats/persian",
        "title": "Persian",
      },
      {
        "_path": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "title": "Cats list",
  },
]
`;

exports[`fixtures:basic > navigation > Get dogs navigation > basic-navigation-dogs 1`] = `
[
  {
    "_path": "/dogs",
    "children": [
      {
        "_path": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "_path": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "title": "Dogs List",
  },
]
`;

exports[`fixtures:basic > navigation > Get navigation > basic-navigation 1`] = `
[
  {
    "_path": "/cats",
    "children": [
      {
        "_path": "/cats/bombay",
        "title": "Bombay",
      },
      {
        "_path": "/cats",
        "title": "Cats list",
      },
      {
        "_path": "/cats/persian",
        "title": "Persian",
      },
      {
        "_path": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "title": "Cats list",
  },
  {
    "_path": "/dogs",
    "children": [
      {
        "_path": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "_path": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "title": "Dogs List",
  },
  {
    "_path": "/",
    "children": [
      {
        "_path": "/",
        "title": "سلام",
      },
    ],
    "title": "سلام",
  },
  {
    "_path": "/",
    "children": [
      {
        "_path": "/",
        "title": "Index",
      },
    ],
    "title": "Index",
  },
]
`;
